Bug 402301: Migration: UI Independent tests
https://bugs.eclipse.org/bugs/show_bug.cgi?id=402301